5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1582_1330.log
== TEST (2019-03-19 15:07:13) 
-- CODE:
r=250/6
print(roud(r,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(roud(r,2))
NameError: name 'roud' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:07:15) 
-- CODE:
r=250/6
print(roud(r,2))
-- EXECUTION TIME:
0.206067
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 2, in <module>
    print(roud(r,2))
NameError: name 'roud' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:07:23) 
-- CODE:
r=250/6
print(round(r,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:07:24) 
-- CODE:
r=250/6
print(round(r,2))
-- EXECUTION TIME:
0.245515
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
